# classface-cluster-pipeline

./: .gitignore  AGENTS.md  README.md  docx2markdown.py  docx2markdownhtml.py  pyproject.toml  test.sqlite
classface_cluster/: __init__.py  album.py  cli.py  clustering.py  config.py  db.py  embedders.py  embeddings_io.py  images.py  pipeline.py  thumbnails.py  ui.py
run_output/run_000001/: index.html
run_output/run_000001/student/: index.html
run_output_copy/run_000008/: index.html
run_output_copy/run_000008/Student_0000/: index.html
run_output_dedup/run_000007/: index.html
run_output_dedup/run_000007/Student_0000/: index.html
run_output_dup/run_000042/: index.html
run_output_dup/run_000042/Student_0000/: index.html
